--- a/package.json
+++ b/package.json
@@ -8,8 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
+    "bootstrap-vue": "^2.18.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "firebase": "^7.24.0",
+    "vue": "^2.6.11",
+    "vue-axios": "^3.1.1",
+    "vue-router": "^3.4.7",
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -18,6 +26,10 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^4.14.1",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
+    "style-resources-loader": "^1.3.3",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
